--- a/front end/css/style.css
+++ b/front end/css/style.css
@@ -1265,6 +1265,12 @@ li.active a {
 .blog-grid1-info{
 	padding:1em;
 }
+
+.blog-grid1-info p{
+	overflow: hidden;
+	height: 115px;
+}
+
 .blog-grid1:nth-child(1){
 	margin-bottom:2em;
 	height: 455px;
